--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,6 @@
             "email": "me@yansongda.cn"
         }
     ],
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/zengsipei/supports"
-    }
-  ],
     "require": {
         "php": ">=7.1.3",
         "ext-openssl": "*",
@@ -26,7 +20,7 @@
         "ext-libxml": "*",
         "ext-json": "*",
         "ext-bcmath": "*",
-        "yansongda/supports": "dev-customs",
+        "yansongda/supports": "^2.0",
         "symfony/http-foundation": "^4.0 || ^5.0.7",
         "symfony/event-dispatcher": "^4.0 || ^5.0"
     },
